--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,15 @@
-<h1>The Best Movies According to Angela</h1>
+<!-- Write your code below -->
+<h1>The Best Movies According to Ethan P!</h1>
+
 <h2>My top 3 movies of all-time.</h2>
+
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+
+<h3>1. Starwars 5</h3>
+<p>My favourite sci-fi movie</p>
+
+<h3>2. Starwars 6</h3>
+<p>A large variety of scenes</p>
+
+<h3>3. Starwars 4</h3>
+<p>Great film!</p>
